# jupyter-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: evaluation.md
examples/: data_loader.ipynb  data_loader_eval.ipynb  data_loader_lab.ipynb  data_loader_vscode.ipynb
jupyter_agent/: bot_actions.py  bot_chat.py  bot_contexts.py  bot_evaluation.py  bot_magics.py  bot_outputs.py  utils.py
jupyter_agent/bot_agents/: __init__.py  base.py  code_debuger.py  code_executor.py  code_generator.py  master_planner.py  output_task_result.py  prepare_next_cell.py  request_user_supply.py  task_code_executor.py  task_coder.py  task_debuger.py  task_planner.py  task_planner_v1.py  task_planner_v2.py  task_planner_v3.py  task_reasoner.py  task_structrue_reasoner.py  task_structrue_summarier.py  task_summarier.py  task_verifier.py  task_verify_summarier.py
jupyter_agent/bot_evaluators/: __init__.py  base.py  dummy_flow.py  dummy_global.py  dummy_task.py  flow_global_planning.py  flow_task_executor.py
jupyter_agent/bot_flows/: __init__.py  base.py  master_planner.py  task_executor.py  task_executor_v1.py  task_executor_v2.py  task_executor_v3.py
tests/: test_bot_actions.py  test_bot_agents_base.py  test_bot_chat.py  test_bot_contexts.py  test_bot_evaluation.py  test_bot_evaluators_base.py  test_bot_flows_base.py  test_bot_outputs.py
