[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-agent"
version = "2025.7.102"
description = "调用LLM实现Jupyter代码的自动生成、执行、调试等功能"
authors = [
    { name="viewstar000" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
urls = { "Homepage" = "https://github.com/viewstar000/jupyter-agent" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "bottle",
    "ipynbname",
    "ipython",
    "jinja2",
    "nbclient",
    "nbformat",
    "openai",
    "pydantic",
    "pyyaml",
    "traitlets",
]

[project.entry-points.console_scripts]
bot_eval = "jupyter_agent.bot_evaluation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jupyter_agent*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]